trunk/Archive2/00/81efc100ed753a/output
main.cpp:5:24: error: static_assert expression is not an integral constant expression
        static_assert(!b, "constructor");
                      ~^
1 error generated.
